# repo-analyzer

./: .gitignore  README.md  pyproject.toml
docs/: 2026-04-15-html-report-design.md  2026-04-15-html-report-plan.md
src/repo_analyzer/: analyzer.py  cloner.py  collector.py  html_report.py  main.py  prompts.py  style.css
